# FaceRecognitionAttendanceSys

./: CMakeLists.txt  main.cpp
include/: mainwindow.h
include/FaceAttendance/: faceattendance.h
sources/: res.qrc
sources/qss/: style.qss
src/: mainwindow.cpp
src/FaceAttendance/: faceattendance.cpp
thirdpart/SeetFace2_x64/lib/cmake/: SeetaFaceDetectorConfig-noconfig.cmake  SeetaFaceDetectorConfig.cmake  SeetaFaceLandmarkerConfig-noconfig.cmake  SeetaFaceLandmarkerConfig.cmake  SeetaFaceRecognizerConfig-noconfig.cmake  SeetaFaceRecognizerConfig.cmake  SeetaFaceRecognizerConfigVersion.cmake  SeetaFaceTrackerConfig-noconfig.cmake  SeetaFaceTrackerConfig.cmake  SeetaNetConfig-noconfig.cmake  SeetaNetConfig.cmake  SeetaQualityAssessorConfig-noconfig.cmake  SeetaQualityAssessorConfig.cmake
thirdpart/SeetFace2_x64/lib/pkgconfig/: SeetaFace.pc  SeetaFaceDetector.pc  SeetaFaceLandmarker.pc  SeetaFaceRecognizer.pc  SeetaFaceTracker.pc  SeetaNet.pc  SeetaQualityAssessor.pc
thirdpart/opencv_x64/: setup_vars_opencv4.cmd
ui/: faceattendance.ui
